Added up arrow icon from favicon.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ http://www.tooplate.com/view/2092-shelf
         <!-- Custom style -->
         <link rel="stylesheet" href="css/tooplate-style.css">
 
+        <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -145,7 +147,7 @@ http://www.tooplate.com/view/2092-shelf
                 let dynamicDiv = document.getElementById('dynamic-gallery');
                 let headerHtml = `
                     <header>
-                        <h6 id="` + fileName + `" class="tm-section-header tm-margin-b-p">` + title + `<div class="tm-section-header-arrow"><a href="#">&#11165;</a></div></h6>
+                        <h6 id="` + fileName + `" class="tm-section-header tm-margin-b-p">` + title + `<div class="tm-section-header-arrow"><a href="#"><iconify-icon icon="bi:arrow-up-circle"></iconify-icon></a></div></h6>
                     </header>`;
 
                 let photoHtml = ``;
