Adjusted header subtitle.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description"
               content="Pour vos projets d'aménagement extérieurs, notre équipe dynamique oeuvre de père en fils depuis plus de 30 ans de la planification à la réalisation">
         <meta name="keywords"
-              content="marcel marin,paysagiste, paysagement extérireur, aménagement paysager, aménagement extérieur, pavé, plantation, muret, réparation de cheminé,patio de piscine, rive-sud, cantons-de-l'est, montérégis, centre du québec, estrie">
+              content="marcel marin, paysagiste, paysagement extérireur, aménagement paysager, aménagement extérieur, pavé, plantation, muret, réparation de cheminé,patio de piscine, rive-sud, cantons-de-l'est, montérégis, centre du québec, estrie">
         <!--
 
 Template 2092 Shelf
@@ -47,7 +47,7 @@ http://www.tooplate.com/view/2092-shelf
                     <h1 class="tm-site-name">Marin & Fils
                     </h1>
                     <p class="tm-site-header-subtitle">
-                        Aménagement paysagé - Réparation de pavé et pierre en tout genre</p>
+                        Aménagement paysagé, pavé unis, muret et réparation de pierre en tout genre</p>
                     <p class="tm-site-description">
                         Une équipe dynamique de père en fils qui oeuvre dans le domaine de l'aménagement paysagé
                         d'extérieur avec plus de 30 ans d'expérience!
