Added link to full size photo.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ http://www.tooplate.com/view/2092-shelf
                     let fileFullName = fileName + fileNumber + '.jpeg';
                     photoHtml += `
                     <figure class="col-md-4 col-sm-6 col-12 tm-gallery-item">
-                        <a href="#">
+                        <a href="./photo/web-photo/` + fileFullName + `">
                             <div class="tm-gallery-item-overlay">
                                 <img src="./photo/web-photo-thumbnails/` + fileFullName + `" alt="` + fileFullName + `"
                                         class="img-fluid tm-img-center">
