--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@ http://www.tooplate.com/view/2092-shelf
         <!-- Custom style -->
         <link rel="stylesheet" href="css/tooplate-style.css">
 
-        <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -61,8 +59,19 @@ http://www.tooplate.com/view/2092-shelf
                         <h3 class="tm-section-header tm-margin-b-p">Contact - Marcel Marin</h3>
                     </header>
                     <div class="tm-gallery-item">
-                        Courriel: <a href="mailto: marcel.marin9@icloud.com">marcel.marin9@icloud.com</a><br>
-                        Téléphone: <a href="tel: 4383954590">438-395-4590</a><br>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                             preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="M12 1.95c-5.52 0-10 4.48-10 10s4.48 10 10 10h5v-2h-5c-4.34 0-8-3.66-8-8s3.66-8 8-8s8 3.66 8 8v1.43c0 .79-.71 1.57-1.5 1.57s-1.5-.78-1.5-1.57v-1.43c0-2.76-2.24-5-5-5s-5 2.24-5 5s2.24 5 5 5c1.38 0 2.64-.56 3.54-1.47c.65.89 1.77 1.47 2.96 1.47c1.97 0 3.5-1.6 3.5-3.57v-1.43c0-5.52-4.48-10-10-10zm0 13c-1.66 0-3-1.34-3-3s1.34-3 3-3s3 1.34 3 3s-1.34 3-3 3z" />
+                        </svg><a href="mailto: marcel.marin9@icloud.com"> marcel.marin9@icloud.com</a><br>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                             preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="M13 8a3 3 0 0 1 3 3a1 1 0 0 0 2 0a5 5 0 0 0-5-5a1 1 0 0 0 0 2Z" />
+                            <path fill="currentColor"
+                                  d="M13 4a7 7 0 0 1 7 7a1 1 0 0 0 2 0a9 9 0 0 0-9-9a1 1 0 0 0 0 2Zm8.75 11.91a1 1 0 0 0-.72-.65l-6-1.37a1 1 0 0 0-.92.26c-.14.13-.15.14-.8 1.38a9.91 9.91 0 0 1-4.87-4.89C9.71 10 9.72 10 9.85 9.85a1 1 0 0 0 .26-.92L8.74 3a1 1 0 0 0-.65-.72a3.79 3.79 0 0 0-.72-.18A3.94 3.94 0 0 0 6.6 2A4.6 4.6 0 0 0 2 6.6A15.42 15.42 0 0 0 17.4 22a4.6 4.6 0 0 0 4.6-4.6a4.77 4.77 0 0 0-.06-.76a4.34 4.34 0 0 0-.19-.73Z" />
+                        </svg><a href="tel: 4383954590"> 438-395-4590</a><br>
                     </div>
 
                     <header>
@@ -147,7 +156,11 @@ http://www.tooplate.com/view/2092-shelf
                 let dynamicDiv = document.getElementById('dynamic-gallery');
                 let headerHtml = `
                     <header>
-                        <h5 id="` + fileName + `" class="tm-section-header tm-margin-b-p">` + title + `<div class="tm-section-header-arrow"><a href="#"><iconify-icon icon="bi:arrow-up-circle"></iconify-icon></a></div></h5>
+                        <h5 id="` + fileName + `" class="tm-section-header tm-margin-b-p">`
+                    + title
+                    + `<div class="tm-section-header-arrow"><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="currentColor" d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/></svg>
+                        </a></div></h5>
                     </header>`;
 
                 let photoHtml = ``;
