Removed unecessary script to optimize loading time.

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ http://www.tooplate.com/view/2092-shelf
 
         <!-- load JS files -->
         <!-- jQuery (https://jquery.com/download/) -->
-        <script src="js/jquery-1.11.3.min.js"></script>
+        <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
         <!-- Popper (https://popper.js.org/) -->
-        <script src="js/popper.min.js"></script>
+        <!-- <script src="js/popper.min.js"></script> -->
         <!-- Bootstrap (https://getbootstrap.com/) -->
         <script src="js/bootstrap.min.js"></script>
 
