Fixed foggy thumbnails. Added courriel and icons in the footer. Updated regions served.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <h3 class="tm-section-header tm-margin-b-p">Régions déservis</h3>
                     </header>
                     <ul>
-                        <li><i>De la Rive-Sud de Montréal aux Cantons-de-l'Est</i></li>
+                        <li>Rive-Sud de Montréal</li>
                         <li>Montérégis</li>
-                        <li>Centre du Québec</li>
+                        <li>Cantons-de-l'Est</li>
                         <li>Estrie</li>
                     </ul>
 
@@ -105,16 +105,42 @@
                             Estimation gratuite par téléphone, courriel ou sur place fait par notre équipe qui
                             répondra à tous vos besoins dans les plus bref délais!
                         </p>
-                        <a href="tel: 4383954590" class="tm-white-bordered-btn">438-395-4590</a>
+                        <!-- <a href="tel: 4383954590" class="tm-white-bordered-btn">438-395-4590</a> -->
+
+                        <div class="row">
+                            <div>
+                                <a class="tm-white-bordered-btn" href="mailto: marcel.marin9@icloud.com">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                         preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                              d="M12 1.95c-5.52 0-10 4.48-10 10s4.48 10 10 10h5v-2h-5c-4.34 0-8-3.66-8-8s3.66-8 8-8s8 3.66 8 8v1.43c0 .79-.71 1.57-1.5 1.57s-1.5-.78-1.5-1.57v-1.43c0-2.76-2.24-5-5-5s-5 2.24-5 5s2.24 5 5 5c1.38 0 2.64-.56 3.54-1.47c.65.89 1.77 1.47 2.96 1.47c1.97 0 3.5-1.6 3.5-3.57v-1.43c0-5.52-4.48-10-10-10zm0 13c-1.66 0-3-1.34-3-3s1.34-3 3-3s3 1.34 3 3s-1.34 3-3 3z" />
+                                    </svg>
+                                    marcel.marin9@icloud.com</a>
+                            </div>
+                            <div>
+                                <a class="tm-white-bordered-btn" href="tel: 4383954590">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                         preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                              d="M13 8a3 3 0 0 1 3 3a1 1 0 0 0 2 0a5 5 0 0 0-5-5a1 1 0 0 0 0 2Z" />
+                                        <path fill="currentColor"
+                                              d="M13 4a7 7 0 0 1 7 7a1 1 0 0 0 2 0a9 9 0 0 0-9-9a1 1 0 0 0 0 2Zm8.75 11.91a1 1 0 0 0-.72-.65l-6-1.37a1 1 0 0 0-.92.26c-.14.13-.15.14-.8 1.38a9.91 9.91 0 0 1-4.87-4.89C9.71 10 9.72 10 9.85 9.85a1 1 0 0 0 .26-.92L8.74 3a1 1 0 0 0-.65-.72a3.79 3.79 0 0 0-.72-.18A3.94 3.94 0 0 0 6.6 2A4.6 4.6 0 0 0 2 6.6A15.42 15.42 0 0 0 17.4 22a4.6 4.6 0 0 0 4.6-4.6a4.77 4.77 0 0 0-.06-.76a4.34 4.34 0 0 0-.19-.73Z" />
+                                    </svg>
+                                    438-395-4590</a>
+                            </div>
+
+                        </div>
                     </div>
                 </section>
             </div>
             <footer>
-                Copyright &copy; <span id="current-year" class="tm-current-year">2018</span> Marin
-                & Fils - Designed by <a href="https://www.facebook.com/tooplate" target="_parent">Tooplate</a>
+                Copyright &copy; <span id="current-year" class="tm-current-year">2018</span>
+                <a src="https://marinetfils.ca">Marin & Fils</a> - Designed by
+                <a href="https://www.facebook.com/tooplate" target="_parent">Tooplate</a>
                 <div><a href="https://www.flaticon.com/fr/icones-gratuites/plante" title="plante icônes">Icônes créées
                         par Pixel perfect -
-                        Flaticon</a></div>
+                        Flaticon</a>
+                </div>
             </footer>
         </div>
 
