--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </header>
                     <ul>
                         <li>Rive-Sud de Montréal</li>
-                        <li>Montérégis</li>
+                        <li>Montérégie</li>
                         <li>Cantons-de-l'Est</li>
                         <li>Estrie</li>
                     </ul>
@@ -105,8 +105,6 @@
                             Estimation gratuite par téléphone, courriel ou sur place fait par notre équipe qui
                             répondra à tous vos besoins dans les plus bref délais!
                         </p>
-                        <!-- <a href="tel: 4383954590" class="tm-white-bordered-btn">438-395-4590</a> -->
-
                         <div class="row">
                             <div>
                                 <a class="tm-white-bordered-btn" href="mailto: marcel.marin9@icloud.com">
