Fixed more spelling.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description"
           content="Pour vos projets d'aménagement extérieurs et réparation de pierre, notre équipe dynamique oeuvre dans le domaine de père en fils depuis plus de 30 ans.">
     <meta name="keywords"
-          content="marcel marin, marin fils,marin et fils,aménagement paysager,aménagement extérieur,paysagiste,paysagement extérireur,pavé, pavé unis,muret,pierre,réparation cheminé,patio piscine,rive-sud,cantons-de-l'est,montérégis,centre du québec,estrie">
+          content="marcel marin, marin fils,marin et fils,aménagement paysager,aménagement extérieur,paysagiste,paysagement extérireur,pavé, pavé uni,muret,pierre,réparation cheminé,patio piscine,rive-sud,cantons-de-l'est,montérégis,centre du québec,estrie">
 
     <title>Marin & Fils - Aménagement paysager</title>
     <link rel="shortcut icon"
@@ -35,7 +35,7 @@
                 <h1 class="tm-site-name">Marin & Fils
                 </h1>
                 <p class="tm-site-header-subtitle">
-                    Aménagement paysagé, pavé unis, muret et réparation de pierre en tout genre</p>
+                    Aménagement paysagé, pavé uni, muret et réparation de pierre en tout genre</p>
                 <p class="tm-site-description">
                     Une équipe dynamique de père en fils qui oeuvre dans le domaine de l'aménagement paysagé
                     d'extérieur avec plus de 30 ans d'expérience!
@@ -87,7 +87,7 @@
                 </div>
 
                 <header>
-                    <h3 class="tm-section-header tm-margin-b-p">Régions désservis</h3>
+                    <h3 class="tm-section-header tm-margin-b-p">Régions desservis</h3>
                 </header>
                 <ul>
                     <li>Rive-Sud de Montréal</li>
